JumpScript/tests/baselines/reference/objectTypesWithPredefinedTypesAsName2.errors.txt
tests/cases/conformance/types/specifyingTypes/predefinedTypes/objectTypesWithPredefinedTypesAsName2.jump(3,7): error TS1005: '{' expected.


==== tests/cases/conformance/types/specifyingTypes/predefinedTypes/objectTypesWithPredefinedTypesAsName2.jump (1 errors) ====
    // it is an error to use a predefined type as a type name
    
    class void {} // parse error unlike the others
          ~~~~
!!! error TS1005: '{' expected.